<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">数据手袋</string>
    <string name="case_config">手袋设置</string>
   <string name="case_exit">退出手袋</string>
   
    <string name="label_not_null">*</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="save_new">保存并新增</string>
    <string name="get_back">上一条</string>
    <string name="get_next">下一条</string>
    <string name="filter_hint">输入过滤内容</string>
    <string name="record_nums">总数：</string>
    <string name="data_exiting">正在安全退出......</string>
    <string name="data_loading">数据正在载入中......</string>
    <string name="data_deleteing">数据正在删除中......</string>
    <string name="message_loading">正在登陆，请稍候......</string>
    <string name="lable_new">添加</string>
    <string name="lable_edit">编辑</string>
    <string name="lable_del">删除</string>
    <string name="lable_unit_tiao">条</string>
    <string name="lable_data_changed">是否保存？\n选择“是”，则保存并退出。\n选择“否”，则直接退出。\n选择“取消”，则什么也不做。</string>
    <string name="lable_delete_confirm">是否确认删除该记录？</string>
    <string name="message_save_error">保存失败！</string>
    <string name="message_delete_success">记录删除成功！</string>
    <string name="lable_close_info">请确认退出</string>
    <string name="lable_yes">是</string>
    <string name="lable_no">否</string>
    <string name="operate_menu">操作菜单</string>
    <string name="ok">确定</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="clear">清除</string>
    <string name="reset">重置</string>
    <string name="blank">空</string>
    <string name="copy">复制</string>
    <string name="help">帮助</string>
    <string name="prompt">提示：</string>
    <string name="not_null">“{0}”不允许为空！</string>
    <string name="not_ready">“{0}”尚未填写，无法计算！</string>
    <string name="confirm_exit">确定退出手袋？</string>
    <string name="calculator_step">计算过程：</string>
    <string name="calculator_copy">复制内容</string>
    <string name="calculator_copy_sucess">复制成功！</string>
    <string name="lable_content">内容：</string>
    <string name="lable_code_icon_down">更多图标</string>
    <string name="title_pass">请输入访问密码!</string>
    <string name="error_pass">密码输入错误！</string>
    <string name="lable_pass">访问密码</string>
    <!--  -->
     <string name="about_us">关于手袋</string>
    <string name="about_alarm">本软件受国际版权法保护。版权所有，未经授权不得商用！</string>
    <string name="about_version">版本号:V_ </string>
    <string name="about_owner">八股文@版权所有</string>
    <string name="about_url">www.wmptool.com</string>
    <string name="about_qq">我们的邮箱：ptool@wmptool.com</string>
    <string name="about_description">数据手袋，您的贴身数据管理专家！</string>
    <string name="about_share">推荐给朋友</string>
    <string name="about_update_log">查看历史版本</string>
    <string name="about_update_get">获取最新版本</string>
    <!--  -->
     <string name="message_add_success">“{0}”记录添加成功！</string>
    <string name="message_update_success">“{0}”记录更新成功！</string>
    <string name="message_no_delete">“{0}”已经被使用，不允许删除！</string>
    <!--  -->
    <string name="lable_config_save">应用配置</string>
    <string name="lable_config_exit">取消配置</string>
    <string name="lable_select_backup">选择备份文件</string>
    <string name="lable_backup_empty">当前尚未产生任何备份文件，无法恢复！</string>
    <string name="lable_backup_confirm">确认以{0}的备份替换当前的数据库？</string>
    <string name="lable_resume_success">{0}备份的数据库恢复成功！</string>
    <string name="config_autobackup">启用自动备份：</string>
    <string name="config_autobackup_nums">设置保留的备份文件数：</string>
    <string name="config_pass_checked">密码验证通过！</string>
    <string name="config_password">设置访问密码：</string>
    <string name="config_only_int">启用纯数字密码：</string>
    <string name="config_only_picture">使用绘图解锁：</string>
    <string name="config_only_int_warning">启用纯数字密码，请确保设定的密码为纯数字，以免登录时遇到问题！</string>
    <string name="config_new_pass">请输入访问密码</string>
    <string name="config_repeat_pass">再次输入访问密码</string>
    <string name="config_pass_deferent">两次输入的密码不一样，请重新输入！</string>
    <string name="config_pass_clear">密码已经清除，下次登录不再需要密码验证！</string>
    <string name="config_pass_ok">新的验证密码为“{0}”，请不要忘记，保存配置后起效！</string>
    <string name="config_pass_ok_locus">密码修改成功,请记住密码！</string>
    <string name="config_pass_short">密码太短,请重新输入!</string>
     <string name="config_pass_can_set">密码验证通过，您可以设置新的访问密码!</string>
     <string name="config_database_resume">数据库备份恢复：</string>
    <string name="config_database_path">数据库地址：</string>
    <string name="config_database_backup_path">备份地址：</string>
    <string name="config_sort">手袋排序</string>
    <string name="locus_no_password">你还没有设置密码,点击进入设置密码!</string>
    <!--  -->
	<string name="type_name">手袋名称：</string>
    <string name="type_name2">手袋名称</string>
      <string name="type_icon">显示图标：</string>
      <string name="type_mark">备注：</string>
     <string name="type_chars">要素管理</string>
     <string name="type_new">添加手袋</string>
     <string name="type_edit">修改手袋</string>
     <string name="type_trash">删除手袋</string>
     <string name="type_view">切换视图</string>
     <string name="type_trash_alarm">所有数据都会被删除，是否确认？</string>
      <!--  -->
	<string name="char_order_save">保存排序</string>
	<string name="char_order_save_ok">要素排序保存成功！</string>
	<string name="char_name">要素名称：</string>
	<string name="char_type">要素类型：</string>
	<string name="char_can_null">是否必填：</string>
	<string name="char_decimal">小数精度：</string>
	<string name="char_unit">显示单位：</string>
	<string name="char_need_count">需要统计：</string>
	<string name="char_count_type">统计方式：</string>
	<string name="char_values">可选值集：</string>
	<string name="char_values_open">值集维护</string>
	<string name="char_values_mutli">允许多选：</string>
	<string name="char_hide">是否隐藏：</string>
	<string name="char_fix_value">默 认 值：</string>  
	<string name="char_math_a">计算要素A：</string>
	<string name="char_math_b">计算要素B：</string>
	<string name="char_math_nochar">当前无要素可以用于计算，请先维护！</string>
	<string name="char_math_noplace">当前要素超过40个，无法保存！</string>
	<string name="char_math_type">计 算 方 法：</string>
	<string name="char_math_type_result">计算公式：{0}</string>
	 <string name="char_new">添加要素</string>
     <string name="char_edit">修改要素</string>
     <string name="char_save_first">请先保存要素，才维护值集！</string>
      <string name="char_add_success">“{0}”要素添加成功！</string>
    <string name="char_update_success">“{0}”要素更新成功！</string>
    <!--  -->
    <string name="value_name">选择项值：</string>
    <string name="value_list_title">“{0}”值集维护</string>
     <string name="value_new">添加值集</string>
     <string name="value_edit">修改值集</string>
</resources>