<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_menu_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pass"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <ptool.datacase.util.locus.LocusPassWordView
        android:id="@+id/mLocusPassWordView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/imgTool" >
    </ptool.datacase.util.locus.LocusPassWordView>

    <LinearLayout
        android:id="@+id/imgTool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-4dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-6dp"
            android:background="@drawable/toolbar_bg"
            android:gravity="center" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/btn_dialog"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/btn_dialog"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>