<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layCharListMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_var_view"
        layout="@layout/include_list_top" />

    <ptool.datacase.util.control.DraggableListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tlv="http://schemas.android.com/apk/res/ptool.datacase"
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/list_item_normal"
        android:divider="@drawable/divider"
        android:drawSelectorOnTop="false"
        tlv:grabber="@+id/icon"
        tlv:normal_height="70dip"
        tlv:remove_mode="slideLeft" />

    <LinearLayout
        android:id="@+id/layStatMin"
        android:layout_width="fill_parent"
        android:layout_height="64.0dip"
        android:background="@drawable/back"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/layNew"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/menu_selector_background"
            android:focusable="true"
            android:gravity="bottom|center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lable_new"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/laySave"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/menu_selector_background"
            android:focusable="true"
            android:gravity="bottom|center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/save" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/char_order_save"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_weight="1.0"
            android:gravity="right|center" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dip"
                android:text="@string/record_nums"
                android:textColor="@color/white" >
            </TextView>

            <TextView
                android:id="@+id/tvRecordNums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:textColor="@color/white" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>